src/styles/elements/_review.css
.review {
    --review-border-bottom: var(--border-width-normal) solid var(--border-color-default);
    --review-padding: var(--spacing-m) 0;

    --review-header-infos-display: flex;
    --review-header-infos-flex-direction: column;
    --review-header-infos-align-items: flex-start;
    --review-header-infos-justify-content: center;
    --review-header-infos-gap: var(--spacing-normal);
    --review-header-width: 100%;

    --review-title-margin: 0;

    --review-infos-display: flex;
    --review-infos-flex-direction: row;
    --review-infos-flex-wrap: wrap;
    --review-infos-align-items: center;
    --review-infos-justify-content: flex-start;
    --review-infos-gap: var(--spacing-s) var(--spacing-normal);
    --review-infos-width: 100%;

    --review-info-margin: 0;
    --review-info-font-family: var(--font-family-text);
    --review-info-font-size: var(--font-size-normal);
    --review-info-color: var(--color-font);

    --review-rating-flex-grow: 1;
    --review-rating-text-align: left;

    --review-info-label-font-weight: var(--font-weight-text-bold);

    --review-content-margin-top: var(--spacing-normal);
    --review-content-display: grid;
    --review-content-grid-template-columns: 1fr;
    --review-content-grid-gap: var(--content-spacing-between-columns);

    --review-figure-width: 100%;
    --review-figure-border-radius: var(--border-radius-default);
    --review-figure-overflow: hidden;

    --review-image-height: auto;
    --review-image-width: 100%;
    --review-image-aspect-ratio: var(--aspect-ratio-default);
    --review-object-fit: cover;

    --review-footer-color: var(--color-primary);
    --review-footer-padding: var(--spacing-m);
    --review-footer-backgorund-color: var(--color-primary-o-10);
    --review-footer-margin: var(--spacing-m) 0 0;

    --review-footer-title-font-family: var(--font-family-text);
    --review-footer-title-font-size: var(--font-size-normal);
    --review-footer-title-font-weight: var(--font-weight-text-bold);
    --review-footer-title-color: var(--color-primary);
    --review-footer-title-margin: 0 0 var(--spacing-s);

    padding: var(--review-padding);
    border-bottom: var(--review-border-bottom);
}

.review[no-media] {
    --review-content-grid-template-columns: 1fr;
}

.review:first-child {
    --review-border-top: var(--border-width-normal) solid var(--border-color-default);

    border-top: var(--review-border-top);
}

.review__header {
    display: var(--review-header-infos-display);
    flex-direction: var(--review-header-infos-flex-direction);
    align-items: var(--review-header-infos-align-items);
    justify-content: var(--review-header-infos-justify-content);
    gap: var(--review-header-infos-gap);
    width: var(--review-header-width)
}

.review__title {
    margin: var(--review-title-margin);
}

.review__infos {
    display: var(--review-infos-display);
    flex-direction: var(--review-infos-flex-direction);
    flex-wrap: var(--review-infos-flex-wrap);
    align-items: var(--review-infos-align-items);
    justify-content: var(--review-infos-justify-content);
    gap: var(--review-infos-gap);
    width: var(--review-infos-width);
}

.review__info {
    margin: var(--review-info-margin);
    font-family: var(--review-info-font-family);
    font-size: var(--review-info-font-size);
    color: var(--review-info-color);
}

.review__rating {
    flex-grow: var(--review-rating-flex-grow);
    text-align: var(--review-rating-text-align);
}

.review__info-label {
    font-weight: var(--review-info-label-font-weight);
}

.review__header + .review__content {
    margin-top: var(--review-content-margin-top);
}

.review__content {
    display: var(--review-content-display);
    grid-template-columns: var(--review-content-grid-template-columns);
    gap: var(--review-content-grid-gap);
}

.review__figure {
    width: var(--review-figure-width);
    border-radius: var(--review-figure-border-radius);
    overflow: var(--review-figure-overflow);
}

.review__image {
    height: var(--review-image-height);
    width: var(--review-image-width);
    aspect-ratio: var(--review-image-aspect-ratio);
    object-fit: var(--review-object-fit);
}

.review__review > *:first-child {
    margin-top: 0;
}

.review__review > *:last-child {
    margin-bottom: 0;
}

.review__footer {
    color: var(--review-footer-color);
    padding: var(--review-footer-padding);
    background-color: var(--review-footer-backgorund-color);
    margin: var(--review-footer-margin);
}

.review__footer > *:nth-child(2) {
    margin-top: 0;
}

.review__footer > *:last-child {
    margin-bottom: 0;
}

.review__footer-title {
    font-family: var(--review-footer-title-font-family);
    font-size: var(--review-footer-title-font-size);
    font-weight: var(--review-footer-title-font-weight);
    color: var(--review-footer-title-color);
    margin: var(--review-footer-title-margin);
}

@media screen and (min-width: 640px) {
    .review {
        --review-content-grid-template-columns: 1fr 2fr;
    }
}

@media screen and (min-width: 840px) {
    .review {
        --review-rating-text-align: right;
    }
}

